src/test/deca/context/valid/test7_op_arith2.deca
// Description:
//    Programme testant des declarations de variables et des instructions (sum et mult).
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//	  
//
// Historique:
//    cree le 09/01/2020

{
	// declarations simples
	int i, j;
	float f, g;
    boolean a=true, b=false;

	i = (1+(1+(1+(1+(1+(1+(1+(1-(1-(1-(1-(1-(1*(1*(1*(1*(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1+(1%(1/(1/(1/(1*1)))))))))))))))))))))))))))))))))));
    j = (((((((((((((((((((((((((((((((((((1*1)/1)/1)/1)*1)*1)*1)*1)*1)*1)%1)-1)-1)-1)-1)-1)-1)-1)-1)+1)+1)+1)+1)+1)+1)+1)+1)+1)+1)+1)+1)+1)+1)+1)+1);

    f = (1.0+(1.0+(1.0+(1.0+(1.0-(1.0-(1.0-(1.0-(1.0/(1.0/(1.0/(1.0/(1.0*(1.0*(1.0*1.0)))))))))))))));
    g = (((((((((((((((1.0*1.0)*1.0)*1.0)/1.0)/1.0)-1.0)-1.0)-1.0)-1.0)+1.0)+1.0)+1.0)+1.0)+1.0)+1.0);

    a = (a||(b||(a&&(b&&(a==(b==(a!=(b!=true))))))));
    b = i==j && i<j || i<=j && i>j || i>=j && i!=j;

    println(i);
    println(j);
    println(f);
    println(g);
}
